ai_power/config/ai_power_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-power
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-power
  template:
    metadata:
      labels:
        app: ai-power
    spec:
      containers:
      - name: ai-power
        image: wangkaihua/ai_power_demo:rails8-v3
        ports:
        - containerPort: 3000
