ai_power/config/file_center_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-center
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-center
  template:
    metadata:
      labels:
        app: file-center
    spec:
      containers:
      - name: file-center
        image: wangkaihua/file_center:rails8-v2
        ports:
        - containerPort: 4000
