ai_power/config/audio_recognition_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audio-recognition
spec:
  type: LoadBalancer
  selector:
    app: audio-recognition
  ports:
    - protocol: TCP
      port: 7860
      targetPort: 7860
