ai_power/config/file_center_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-center
spec:
  type: LoadBalancer
  selector:
    app: file-center
  ports:
  - port: 4000
    targetPort: 4000
