ai_power/config/maxkb_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maxkb
spec:
  # type: LoadBalancer
  type: NodePort
  selector:
    app: maxkb
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30001
